working with various verbs (data in memory)
